--- a/index.html
+++ b/index.html
@@ -16,21 +16,25 @@ isHome: true
   Ms. Bensky has a pink book on her desk titled "Schedule A lab". Look at her schedule (located next to the binder) and find a time that works for you. Write the time down in the binder.
   <h3 id="manuel">Dr. Manuel</h3>
   Find a time that works for you and Dr. Manuel on <a href="https://calendar.google.com/calendar/b/0/embed?title=Dr.+Manuel%27s+Lab+Schedule&mode=WEEK&height=600&wkst=2&bgcolor=%23FFFFFF&src=1u1love089au0gat03s836b2vk@group.calendar.google.com&color=%23125A12&src=7ctgu58j2p9qdbhg9u35dva9bg@group.calendar.google.com&color=%23856508&ctz=America/New_York">Dr. Manuel's Schedule</a>, then click the button below to schedule your lab.<br><br>
-  <a class="btn btn-outline btn-lg" href="https://spreadsheets.google.com/viewform?formkey=dFZWMV9rUXB4TFJscDBRa0JqbHYwc2c6MQ">Lab With Dr. Manuel</a>
+  <button class="btn btn-outline btn-lg" onclick='inlineSchedule("https://spreadsheets.google.com/viewform?formkey=dFZWMV9rUXB4TFJscDBRa0JqbHYwc2c6MQ", "manuelLink")'>Lab With Dr. Manuel</button>
+  <div id="manuelLink" class="inlineSchedule"></div>
 </section>
 
 <section class="bs-docs-section">
   <h1 id="Science" class="page-header">Science</h1>
   <h3 id="cuello">Dr. Cuello</h3>
   Click the button below to lab with Dr. Cuello.<br><br>
-  <a class="btn btn-outline btn-lg" href="https://pcuello.youcanbook.me">Lab with Dr. Cuello</a>
+  <button class="btn btn-outline btn-lg" onclick='inlineSchedule("https://pcuello.youcanbook.me", "cuelloLink")'>Lab with Dr. Cuello</button>
+  <div id="cuelloLink" class="inlineSchedule"></div>
+
 </section>
 
 <section class="bs-docs-section">
   <h1 id="History" class="page-header">History</h1>
   <h2 id="jones">Ms. Jones</h2>
   Click on the button below to lab with Ms. Jones.<br><br>
-  <a class="btn btn-outline btn-lg" href="https://ejones.youcanbook.me">Lab with Ms. Jones</a>
+  <button class="btn btn-outline btn-lg" onclick='inlineSchedule("https://ejones.youcanbook.me", "jonesLink")'>Lab with Ms. Jones</button>
+  <div id="jonesLink" class="inlineSchedule"></div>
 </section>
 
 <section class="bs-docs-section">
