--- a/index.html
+++ b/index.html
@@ -41,5 +41,5 @@ isHome: true
   <h1 id="English" class="page-header">English</h1>
   <h2 id="glassman">Mr. Glassman</h2>
   To schedule a lab with Mr. Glassman, email him by pushing the button below.<br><br>
-  <a class="btn btn-outline btn-lg" href="mailto:Andrew_Glassman@dalton.org">Lab with Mr. Glassman</a>
+  <a class="btn btn-outline btn-lg" href="mailto:Andrew_Glassman@dalton.org?Subject=lab&Body=%0ALab%20created%20by%20LabWith.Me">Lab with Mr. Glassman</a>
 </section>
